--- a/index.html
+++ b/index.html
@@ -6,10 +6,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Platinum Mobile DJ - Song Request</title>
     <link rel="icon" type="image/x-icon" href="/favicon.png">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous"/>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
+    <nav class="navbar navbar-light bg-danger navbar-expand-lg">
+      <a href="#" class="navbar-brand">Platinum Mobile DJ</a>
+      <button
+        class="navbar-toggler"
+        data-toggle="collapse"
+        data-target="#navbarCollapse"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav ml-auto">
+          <li class="navbar-item">
+            <a href="#" class="nav-link">Home</a>
+          </li>
+          <li class="navbar-item">
+            <a href="#" class="nav-link">Blog</a>
+          </li>
+          <li class="navbar-item">
+            <a href="#" class="nav-link">About</a>
+          </li>
+          <li class="navbar-item">
+            <a href="#" class="nav-link">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
     <div class="container p-2 col-12 col-sm-6 col-lg-3">
       <h1 role="heading"><strong>Request a Song!</strong></h1>
       <hr/>
@@ -46,7 +77,7 @@
         <div class="container">
           <div class="row no-gutters">
             <div class="col-1">
-              <button type="button" class="btn btn-outline-light btn-sm" id="refreshButton">
+              <button type="button" class="btn btn-outline-light btn-sm p-1" id="refreshButton">
                 <img type="submit" src="/refreshIcon .png" alt="refresh page" style="height: 15px;" class="m-1" id="refreshImg">
               </button>
             </div>
@@ -63,6 +94,17 @@
       <map name="songIdeas">
         <area shape="rect" coords="8,1,214,223" alt="Song Ideas" href="https://open.spotify.com/playlist/37i9dQZF1DXcBWIGoYBM5M" target="_blank">
       </map>
+      <li class="dropdown" id="dropdown">
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+          Are you having fun?
+          <span class="caret"></span>
+        </a>
+        <ul class="dropdown-menu btn btn-link">
+          <li><a href="#">Yes</a></li>
+          <div class="dropdown-divider"></div>
+          <li><a href="#">No</a></li>
+        </ul>
+      </li>
     </div>
     <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
     <script src="/responsiveslides.min.js"></script>
